@@ -155,6 +155,8 @@ IDLE
 Tests
 -----
 
+- Issue #11185: Fix test_wait4 under AIX.  Patch by Sébastien Sablé.
+
 - Issue #17691: test_univnewlines now works with unittest test discovery.
   Patch by Zachary Ware.
 
